--- a/base_workspace/cc/utility/BUILD
+++ b/base_workspace/cc/utility/BUILD
@@ -6,7 +6,15 @@ cc_library(
 )
 
 cc_library(
+  name = "queue",
+  hdrs = ["queue.h"],
+  deps = ["//external:glog"],
+  visibility = ["//visibility:public"],
+)
+
+cc_library(
   name = "stream",
   hdrs = ["stream.h"],
+  deps = [":queue"],
   visibility = ["//visibility:public"],
 )
