--- a/base_workspace/java/com/turbosanta/backend/logging/streams/BUILD
+++ b/base_workspace/java/com/turbosanta/backend/logging/streams/BUILD
@@ -7,3 +7,21 @@ java_library(
   deps = ["//external:guava"],
   visibility = ["//visibility:public"],
 )
+
+java_library(
+  name = "multi_traversal_stream",
+  srcs = ["MultiTraversalStream.java"],
+  deps = [
+    "//external:findbugs",
+    "//external:guava",
+    ":lazy_value",
+    ":streams",
+  ],
+  visibility = ["//visibility:public"],
+)
+
+java_library(
+  name = "lazy_value",
+  srcs = ["LazyValue.java"],
+  visibility = ["//visibility:public"],
+)
