--- a/base_workspace/WORKSPACE
+++ b/base_workspace/WORKSPACE
@@ -53,3 +53,14 @@ bind(
   name = "guava",
   actual = "@remote_guava//jar"
 )
+
+maven_jar(
+  name = "remote_findbugs",
+  artifact = "com.google.code.findbugs:jsr305:3.0.0",
+  sha1 = "5871fb60dc68d67da54a663c3fd636a10a532948",
+)
+
+bind(
+  name = "findbugs",
+  actual = "@remote_findbugs//jar",
+)
