--- a/base_workspace/java/com/turbosanta/backend/logging/BUILD
+++ b/base_workspace/java/com/turbosanta/backend/logging/BUILD
@@ -5,7 +5,8 @@ java_library(
     "//external:guava",
     "//java/com/turbosanta/backend/logging/streams",
     "//java/com/turbosanta/backend/logging/streams:multi_traversal_stream",
-    "//java/com/turbosanta/backend/logging/memory:memory_profiler_consumer_builder",
+    "//java/com/turbosanta/backend/logging/streams:stream_runner",
+    "//java/com/turbosanta/backend/logging/memory:memory_region_write_event_printing_pipeline",
     "//protobuf/backend/logging:message_java",
     ":communication_layer",
     ":consumer",
