--- a/base_workspace/java/com/turbosanta/backend/logging/streams/BUILD
+++ b/base_workspace/java/com/turbosanta/backend/logging/streams/BUILD
@@ -3,8 +3,25 @@ java_library(
   srcs = [
     "InStream.java",
     "OutStream.java",
+    "InStreamManipulators.java",
+    "StringPrinterSinkProcess.java",
   ],
   deps = ["//external:guava"],
+  visibility = ["//visibility:public"],
+)
+
+java_library(
+  name = "stream_runner",
+  srcs = [
+    "StreamRunner.java",
+    "StreamRunnerBuilder.java",
+  ],
+  deps = [
+    "//java/com/turbosanta/backend/logging:consumer",
+    "//java/com/turbosanta/backend/logging:consumer_builder",
+    "//protobuf/backend/logging:message_java",
+    ":streams",
+  ],
   visibility = ["//visibility:public"],
 )
 
