--- a/base_workspace/cc/utility/BUILD
+++ b/base_workspace/cc/utility/BUILD
@@ -15,6 +15,19 @@ cc_library(
 cc_library(
   name = "stream",
   hdrs = ["stream.h"],
-  deps = [":queue"],
+  deps = [":resizable_ring_buffer"],
+  visibility = ["//visibility:public"],
+)
+
+cc_library(
+  name = "ring_buffer",
+  hdrs = ["ring_buffer.h"],
+  visibility = ["//visibility:public"],
+)
+
+cc_library(
+  name = "resizable_ring_buffer",
+  hdrs = ["resizable_ring_buffer.h"],
+  deps = ["//external:glog"],
   visibility = ["//visibility:public"],
 )
