Updated BUILD files.

--- a/base_workspace/cc/backend/decompiler/BUILD
+++ b/base_workspace/cc/backend/decompiler/BUILD
@@ -8,7 +8,10 @@ cc_library(
   name = "raw_instruction",
   hdrs = ["raw_instruction.h"],
   srcs = ["raw_instruction.cc"],
-  deps = ["//external:glog"],
+  deps = [
+    "//external:glog",
+    ":rom_bridge",
+  ],
 )
 
 cc_library(
