Got lexer to build.

--- a/base_workspace/cc/backend/compiler/BUILD
+++ b/base_workspace/cc/backend/compiler/BUILD
@@ -5,15 +5,15 @@ cc_library(
   deps = [":tokens"],
 )
 
-gen_rule(
+genrule(
   name = "generate_lexer",
   srcs = ["asm_flex_lexer.lex"],
   outs = ["asm_lexer.cc"],
-  cmd = "flex $< --outfile=$@"
+  cmd = "flex -o $@ $<"
 )
 
 cc_library(
   name = "tokens",
   hdrs = ["tokens.h"],
-  deps = ["cc/backend/decompiler:instruction"],
+  deps = ["//cc/backend/decompiler:instruction"],
 )
