work in progress

--- a/base_workspace/cc/backend/sound/BUILD
+++ b/base_workspace/cc/backend/sound/BUILD
@@ -4,12 +4,31 @@ cc_library(
     "sound_controller.cc"
   ],
   hdrs = [
-    "sound_controller.h"
+    "sound_controller.h",
+    "sound_flags.h",
   ],
   deps = [
     "//cc/backend/memory:memory_segment",
     "//cc/backend/memory:module",
-    ":sound_player"
+    ":sound_channel",
+    ":sound_player",
+    "//external:glog"
+  ],
+  visibility = ["//visibility:public"],
+)
+
+cc_library(
+  name = "sound_channel",
+  srcs = [
+    "tone_and_sweep_channel.cc"
+  ],
+  hdrs = [
+    "sound_channel.h",
+    "tone_and_sweep_channel.h",
+    "sound_utils.h"
+  ],
+  deps = [
+    "//external:glog"
   ],
   visibility = ["//visibility:public"],
 )
