Fixed dependency issues in sound.

--- a/base_workspace/cc/backend/sound/BUILD
+++ b/base_workspace/cc/backend/sound/BUILD
@@ -5,12 +5,12 @@ cc_library(
   ],
   hdrs = [
     "sound_controller.h",
-    "sound_flags.h",
   ],
   deps = [
     "//cc/backend/memory:memory_segment",
     "//cc/backend/memory:module",
     ":sound_channel",
+    ":sound_flags",
     ":sound_player",
     "//external:glog"
   ],
@@ -18,17 +18,25 @@ cc_library(
 )
 
 cc_library(
-  name = "sound_channel",
-  srcs = [
-    "tone_and_sweep_channel.cc"
+  name = "sound_flags",
+  hdrs = ["sound_flags.h"],
+  deps = [
+    "//cc/backend/memory:flags",
   ],
+)
+
+cc_library(
+  name = "sound_channel",
+  srcs = ["tone_and_sweep_channel.cc"],
   hdrs = [
     "sound_channel.h",
     "tone_and_sweep_channel.h",
     "sound_utils.h"
   ],
   deps = [
-    "//external:glog"
+    "//cc/backend/memory:flags",
+    "//external:glog",
+    ":sound_flags",
   ],
   visibility = ["//visibility:public"],
 )
