--- a/base_workspace/cc/backend/BUILD
+++ b/base_workspace/cc/backend/BUILD
@@ -4,6 +4,7 @@ cc_binary(
   deps = [
     "//cc/backend/clocktroller",
     "//cc/backend/memory/joypad:joypad_module",
+    "@usr//:ncurses"
   ],
   linkopts = [
     "-L/usr/local/lib",
